dataset1235/2025-2/1379599236/users/3062747507/executions/2110095464_2862582401.log
== SUBMISSION (2025-08-25 19:48:37)
-- CODE: 
B = input()
r = int(input())
f = ("abra "+ B +" ") * r
print(f)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
abra carro abra carro
-- TEST CASE 2:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
abra caixa
-- TEST CASE 3:
---- input:
sacola
6
---- correct output:
Abra sacola Abra sacola Abra sacola Abra sacola Abra sacola Abra sacola
---- user output:
abra sacola abra sacola abra sacola abra sacola abra sacola abra sacola
-- TEST CASE 4:
---- input:
casa
3
---- correct output:
Abra casa Abra casa Abra casa
---- user output:
abra casa abra casa abra casa
-- TEST CASE 5:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
abra livro abra livro abra livro abra livro abra livro abra livro abra livro abra livro
-- TEST CASE 6:
---- input:
porta
4
---- correct output:
Abra porta Abra porta Abra porta Abra porta
---- user output:
abra porta abra porta abra porta abra porta
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 19:45:29)
-- CODE: 
B = input()
r = input())
f = ("abra + B + ") * r
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
-- ERROR:
File "XXXX", line 2
    r = input())
               ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
caixa
1
---- correct output:
Abra caixa
-- ERROR:
File "XXXX", line 2
    r = input())
               ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
sacola
6
---- correct output:
Abra sacola Abra sacola Abra sacola Abra sacola Abra sacola Abra sacola
-- ERROR:
File "XXXX", line 2
    r = input())
               ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
casa
3
---- correct output:
Abra casa Abra casa Abra casa
-- ERROR:
File "XXXX", line 2
    r = input())
               ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
-- ERROR:
File "XXXX", line 2
    r = input())
               ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
porta
4
---- correct output:
Abra porta Abra porta Abra porta Abra porta
-- ERROR:
File "XXXX", line 2
    r = input())
               ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 19:48:22)
-- CODE: 
B = input()
r = input())
f = ("abra "+ B +" ") * r
print(f)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
-- ERROR:
File "XXXX", line 2
    r = input())
               ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
caixa
1
---- correct output:
Abra caixa
-- ERROR:
File "XXXX", line 2
    r = input())
               ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
sacola
6
---- correct output:
Abra sacola Abra sacola Abra sacola Abra sacola Abra sacola Abra sacola
-- ERROR:
File "XXXX", line 2
    r = input())
               ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
casa
3
---- correct output:
Abra casa Abra casa Abra casa
-- ERROR:
File "XXXX", line 2
    r = input())
               ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
-- ERROR:
File "XXXX", line 2
    r = input())
               ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
porta
4
---- correct output:
Abra porta Abra porta Abra porta Abra porta
-- ERROR:
File "XXXX", line 2
    r = input())
               ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 19:48:48)
-- CODE: 
B = input()
r = int(input())
f = ("Abra "+ B +" ") * r
print(f)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra carro Abra carro
-- TEST CASE 2:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra caixa
-- TEST CASE 3:
---- input:
sacola
6
---- correct output:
Abra sacola Abra sacola Abra sacola Abra sacola Abra sacola Abra sacola
---- user output:
Abra sacola Abra sacola Abra sacola Abra sacola Abra sacola Abra sacola
-- TEST CASE 4:
---- input:
casa
3
---- correct output:
Abra casa Abra casa Abra casa
---- user output:
Abra casa Abra casa Abra casa
-- TEST CASE 5:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
-- TEST CASE 6:
---- input:
porta
4
---- correct output:
Abra porta Abra porta Abra porta Abra porta
---- user output:
Abra porta Abra porta Abra porta Abra porta
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 19:48:34)
-- CODE: 
B = input()
r = int(input())
f = ("abra "+ B +" ") * r
print(f)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
abra carro abra carro
-- TEST CASE 2:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
abra caixa
-- TEST CASE 3:
---- input:
sacola
6
---- correct output:
Abra sacola Abra sacola Abra sacola Abra sacola Abra sacola Abra sacola
---- user output:
abra sacola abra sacola abra sacola abra sacola abra sacola abra sacola
-- TEST CASE 4:
---- input:
casa
3
---- correct output:
Abra casa Abra casa Abra casa
---- user output:
abra casa abra casa abra casa
-- TEST CASE 5:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
abra livro abra livro abra livro abra livro abra livro abra livro abra livro abra livro
-- TEST CASE 6:
---- input:
porta
4
---- correct output:
Abra porta Abra porta Abra porta Abra porta
---- user output:
abra porta abra porta abra porta abra porta
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 19:48:47)
-- CODE: 
B = input()
r = int(input())
f = ("Abra "+ B +" ") * r
print(f)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra carro Abra carro
-- TEST CASE 2:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra caixa
-- TEST CASE 3:
---- input:
sacola
6
---- correct output:
Abra sacola Abra sacola Abra sacola Abra sacola Abra sacola Abra sacola
---- user output:
Abra sacola Abra sacola Abra sacola Abra sacola Abra sacola Abra sacola
-- TEST CASE 4:
---- input:
casa
3
---- correct output:
Abra casa Abra casa Abra casa
---- user output:
Abra casa Abra casa Abra casa
-- TEST CASE 5:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
-- TEST CASE 6:
---- input:
porta
4
---- correct output:
Abra porta Abra porta Abra porta Abra porta
---- user output:
Abra porta Abra porta Abra porta Abra porta
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
